2008-07-27  Mirco Bauer <meebey@meebey.net> 

	* Frontend-GNOME.mdp: Removed assembly attributes that are now part of the
	  shared AssemblyVersion.cs file.

2008-07-25  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Allow to close a chat using ctrl+w if it's not the session
	  chat (instead of checking for group chat only) (really closes trac bug
	  #67)
	
	  Updated copyright year.

2008-07-24  Mirco Bauer <meebey@meebey.net> 

	* Chats/GroupChatView.cs, Chats/ChatView.cs, Entry.cs: Use monospace bold as
	  default font.
	
	  Parse pango font description once.

2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Makefile.am: Distribute and install .exe.config files.

2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Disabled splashscreen (we have no current logo anyhow).

2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Makefile.am, Main.cs, Frontend-GNOME.mdp, AssemblyInfo.cs.in,
	  AssemblyInfo.cs: Made debug logging an explicit command line parameter
	  (closes trac bug#59).

2008-07-22  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Pass "/window close" to IProtocolManager.CloseChat() instead of
	  doing nothing (before it was a disabled protocol specific hack) (closes
	  trac bug #67).

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* AssemblyInfo.cs: Bumped version to 0.6.0.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* MainWindow.cs: Added close chat menu item.
	* Chats/ChatView.cs: Made Close() method public.
	
	  Removed accelerator from Close menu item, MainWindow handles this now.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Preferences/ServerView.cs: glade3 renamed some widgets because of a
	  conflict ignoring the fact that it those have different toplevel widgets

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Entry.cs: Reset cursor position to the end when going up in the command
	  history.

2008-07-17  Mirco Bauer <meebey@meebey.net> 

	* Frontend.cs: Don't rely on Application.Quit(), call Environment.Quit()